構造がわからなくなってきたのでわかる形にしてしまうため、現時点でコミット。未テスト状態。

--- a/ClinicSchedulerAPI/ClinicSchedulerAPI.csproj
+++ b/ClinicSchedulerAPI/ClinicSchedulerAPI.csproj
@@ -10,4 +10,15 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ClinicScheduler.Application\ClinicScheduler.Application.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
+    <ProjectReference Include="..\ClinicScheduler.Domain\ClinicScheduler.Domain.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
+    <ProjectReference Include="..\ClinicScheduler.nfrastructure\ClinicScheduler.Infrastructure.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
