スケジュールの取得は一時完了。例外処理等に課題あり。

--- a/ClinicScheduler.Domain/ClinicScheduler.Domain.csproj
+++ b/ClinicScheduler.Domain/ClinicScheduler.Domain.csproj
@@ -9,13 +9,9 @@
   <ItemGroup>
     <None Remove="Repositories\" />
     <None Remove="Models\" />
-    <None Remove="Logic\" />
-    <None Remove="ILogic\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Repositories\" />
+    <Folder Include="IRepositories\" />
     <Folder Include="Models\" />
-    <Folder Include="Logic\" />
-    <Folder Include="ILogic\" />
   </ItemGroup>
 </Project>
