指摘取り込み ・DomainModelでのBaseModelの廃止 ・リポジトリでのデータのチェックの廃止（ドメインへの移管は未対応） その他 ・ファイルの整理、フォルダ名の修正 ・予約実施可否チェックのためのデータの取得条件の変更 課題 ・リポジトリでの共通メソッドファイルの作り方

--- a/ClinicScheduler.Infrastructure/ClinicScheduler.Infrastructure.csproj
+++ b/ClinicScheduler.Infrastructure/ClinicScheduler.Infrastructure.csproj
@@ -11,11 +11,13 @@
     <None Remove="Models\" />
     <None Remove="Data\" />
     <None Remove="Newtonsoft.Json" />
+    <None Remove="DBAccess\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Repositories\" />
     <Folder Include="Models\" />
     <Folder Include="Data\" />
+    <Folder Include="DBAccess\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ClinicScheduler.Domain\ClinicScheduler.Domain.csproj" />
