--- a/ClinicScheduler.Domain/ClinicScheduler.Domain.csproj
+++ b/ClinicScheduler.Domain/ClinicScheduler.Domain.csproj
@@ -9,9 +9,17 @@
   <ItemGroup>
     <None Remove="Repositories\" />
     <None Remove="Models\" />
+    <None Remove="Models\ValueObject\" />
+    <None Remove="Models\PatientDomainModel\" />
+    <None Remove="Models\ReservationDomainModel\" />
+    <None Remove="Models\ReservationDomainModel\ValueObjects\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="IRepositories\" />
     <Folder Include="Models\" />
+    <Folder Include="Models\ValueObjects\" />
+    <Folder Include="Models\PatientDomainModel\" />
+    <Folder Include="Models\ReservationDomainModel\" />
+    <Folder Include="Models\ReservationDomainModel\ValueObjects\" />
   </ItemGroup>
 </Project>
